--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.graphql.schema.introspection.enabled=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/ideas
+spring.datasource.username=jakvra
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
