finalization - no more time left

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/ideas
 spring.datasource.username=jakvra
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+# enables generation of random dummy data
+ideas.random.data=true
